--- a/envs/rna.yaml
+++ b/envs/rna.yaml
@@ -3,10 +3,10 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python=3.8
-  - star=2.7.10b
-  - samtools=1.11
-  - deeptools=3.5.1
-  - bedtools=2.29.2
-  - ucsc-bedgraphtobigwig=377
-  - ucsc-bedsort=377
+  - python>=3 #=3.8
+  - star #=2.7.10b
+  - samtools #=1.11
+  - deeptools #=3.5.1
+  - bedtools #=2.29.2
+  - ucsc-bedgraphtobigwig #=377
+  - ucsc-bedsort #=377
